# microservices

./: README.md
taller-1/reto-2/: Cargo.toml  Containerfile
taller-1/reto-2/src/: main.rs
taller-1/reto-3/: compose.yml
taller-1/reto-3/cliente/: Cargo.toml  Containerfile
taller-1/reto-3/servidor/: Cargo.toml  Containerfile
taller-1/reto-4/: Cargo.toml
taller-1/reto-4/src/: main.rs
taller-1/reto-5/: compose.yml
taller-1/reto-5/cliente/: Cargo.toml  Containerfile
taller-1/reto-5/servidor/: Cargo.toml  Containerfile
taller-1/reto-5/servidor/src/: main.rs
taller-1/reto-5/servidor/src/auth/: jwt.rs
taller-1/reto-5/servidor/src/handlers/: jwt.rs
taller-2/reto-1/: Containerfile  compose.yml  history.txt
taller-2/reto-1/client/: Containerfile  script.sh
taller-2/reto-1/data/: 0-db.surql
taller-2/reto-1/server/: Containerfile  compose.yml  script.sh
taller-2/reto-2/: compose.yml
taller-2/reto-2/client/: Cargo.toml  Containerfile
taller-2/reto-2/data/: 0-db.surql  1-model.surql
taller-2/reto-2/server/: schema.sql
taller-2/reto-3/: Containerfile  api-spec.yml
taller-2/reto-4/auth-api/: Cargo.toml
taller-2/reto-4/auth-api/auth/: Cargo.toml
taller-2/reto-4/auth-api/auth-lib/: Cargo.toml
taller-2/reto-4/auth-api/auth-lib/src/: lib.rs  models.rs
taller-2/reto-4/auth-api/auth-lib/src/models/: token.rs  user.rs
taller-2/reto-4/auth-api/auth-lib/src/services/: login.rs  user.rs
taller-2/reto-4/auth-api/auth/src/: catchers.rs  errors.rs  handlers.rs  main.rs  middleware.rs  responders.rs  state.rs  views.rs
taller-2/reto-4/auth-api/auth/src/handlers/: index.rs  login.rs  users.rs
taller-2/reto-4/auth-api/auth/src/middleware/: auth.rs  passwd_reset.rs
taller-2/reto-4/auth-api/auth/src/routes/: login.rs
taller-2/reto-4/auth-api/auth/src/views/: credentials.rs  error.rs  jwt.rs  login.rs  user.rs
taller-3/reto-1/auth-api/: Cargo.toml
taller-3/reto-1/auth/auth_domain/: Cargo.toml
taller-3/reto-1/auth/auth_domain/src/: lib.rs
taller-3/reto-1/auth/auth_domain/src/models/: user.rs
taller-3/reto-1/auth/auth_http/: Cargo.toml
taller-3/reto-1/auth/auth_http/src/: errors.rs  lib.rs  setup.rs  state.rs
taller-3/reto-1/auth/auth_http/src/handlers/: login.rs  tokens.rs  users.rs
taller-3/reto-1/auth/auth_http/src/middleware/: auth.rs  passwd_reset.rs
taller-3/reto-1/auth/auth_http/src/views/: user.rs
taller-3/reto-1/auth/auth_http/tests/: index.rs  users.rs
taller-3/reto-1/auth/auth_http/tests/features/: disable.feature  index.feature  login.feature  register.feature
(+46 files in other folders)
