[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth_lib = { path = "../auth_lib" }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
paginate = "1.1.11"
