[package]
name = "auth_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
password-auth = "0.3.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.27"
