[package]
name = "auth_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { package = "auth_domain", path = "../auth_domain" }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
paginate = "1.1.11"
cucumber = "0.20.0"

[[test]]
name = "index"
harness = false
